fix overflow on mobile
git-svn-id: http://svn.openfoundry.org/moztw@1577 9cc691a1-34e3-0310-a474-e8860ed5959b

--- a/events/scp0712/assets/sass/screen.scss
+++ b/events/scp0712/assets/sass/screen.scss
@@ -154,6 +154,7 @@ body{
 
     div#moztwHeader{
       width: 257px;
+      overflow: hidden;
       ul, form{
         display: none;
       }
